--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
 header {
-	background-color: lightblue;
+	background-color: #BAD455;
+}
+
+footer {
+	background-color: black;
+	color: white;
+}
+
+/***
+* Flexbox Sticky Footer
+* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
+***/
+
+/*corrects IE min-height bug*/
+html { display: flex;}
+body { width: 100%;}
+
+.sfooter {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.sfooter-content {
+	flex: 1 0 auto;
+}
+
+.col-xs-4 {
+	height: 20rem;
+	background-color: violet;
+	border: solid blue;
 }
